add case study content

--- a/assets/css/footer.sass
+++ b/assets/css/footer.sass
@@ -29,6 +29,14 @@
 .right
   text-align: right
 
+.hero-footer
+  margin-bottom: -2em
+
+.hero-buffer
+  height: 2em
+  width: 100%
+  background: $blue
+
 
 @media (max-width: 1400px)
   .social
