--- a/assets/css/fullpage-false.sass
+++ b/assets/css/fullpage-false.sass
@@ -57,8 +57,11 @@ html.fullpage-false
     margin-top: 45vh
 
   .navigation
-    z-index: 100
     background: $lightblue url("img/bg/clear-blue.png")
+
+  .secondary-navigation
+    z-index: 100
+    background: none
 
   .nav
     li
