--- a/assets/css/global.sass
+++ b/assets/css/global.sass
@@ -109,6 +109,7 @@ a
   .tablet-header
     display: block
     color: $pink
+    margin-top: 3em
 
 @media (max-width: 700px)
   .tablet-header
@@ -122,3 +123,19 @@ a
 
   .bolt-one-divider
     display: none
+
+  .quick-expand.one.column,
+  .quick-expand.one.columns,
+  .quick-expand.two.columns,
+  .quick-expand.three.columns,
+  .quick-expand.four.columns,
+  .quick-expand.five.columns,
+  .quick-expand.six.columns,
+  .quick-expand.seven.columns,
+  .quick-expand.eight.columns,
+  .quick-expand.nine.columns,
+  .quick-expand.ten.columns,
+  .quick-expand.eleven.columns,
+  .quick-expand.twelve.columns
+    width: 100%
+    margin: 0 auto
