--- a/views/case-studies/big-and-bold/header.haml
+++ b/views/case-studies/big-and-bold/header.haml
@@ -5,7 +5,7 @@
       Every youtube challenge ever
       %br
       %span.sub
-        Nattional lottery good causes
+        National lottery good causes
 
   .overlay
-  .header-image{ :style => "background-image: url('/assets/img/case-studies/big-and-bold/header-img.jpg')"}
+  .header-image.header-image-right{ :style => "background-image: url('/assets/img/case-studies/big-and-bold/header-img.jpg')"}
