--- a/views/case-studies/big-and-bold/problem.haml
+++ b/views/case-studies/big-and-bold/problem.haml
@@ -11,29 +11,48 @@
       .middle
         .inner
           .row
-            .nine.columns.split-75-25
+            .twelve.columns.split-75-25
 
               .chat-block
-                .highlight.highlight-blue.triangle-border.left
+                .highlight.highlight-blue.triangle-border.left.chat-1-1.chat-left
                   %p.brand The National Lottery:
-                  %p.chat Hey! Can you communicate that over 1,300 British athletes are funded by The National Lottery, making them some of the best athletes in the world?
-                .highlight.highlight-pink.triangle-border.right
+                  %p.chat
+                    Hey! Can you communicate that over
+                    %b 1300
+                    British athletes are funded by
+                    %b The National Lottery
+                    , making them some of the best athletes in the
+                    %b world?
+                .highlight.highlight-pink.triangle-border.right.chat-1-2.chat-right
                   %p.brand Tanjun:
-                  %p.chat Hell yeah we can! No worries!
+                  %p.chat
+                    %b Hell yeah
+                    we can! No worries!
 
               .chat-block
-                .highlight.highlight-blue.triangle-border.left
+                .highlight.highlight-blue.triangle-border.left.chat-1-3.chat-left
                   %p.brand The National Lottery:
-                  %p.chat Awesome! Can you communicate it to a completely new young audience that thinks The National Lottery was created in the early 18th centenary by some ‘old dudes’.
-                .highlight.highlight-pink.triangle-border.right
+                  %p.chat
+                    %b Awesome!
+                    Can you communicate it to a completely new
+                    %b young audience
+                    that thinks The National Lottery was created in the early 18th centenary by some ‘old dudes’.
+                .highlight.highlight-pink.triangle-border.right.chat-1-4.chat-right
                   %p.brand Tanjun:
-                  %p.chat Ha! Young people hey, lol. Yep, no worries.
+                  %p.chat
+                    Ha! Young people hey, lol. Yep,
+                    %b no worries.
 
               .chat-block
-                .highlight.highlight-blue.triangle-border.left
+                .highlight.highlight-blue.triangle-border.left.chat-1-5.chat-left
                   %p.brand The National Lottery:
-                  %p.chat Also, can you raise awareness that as well as athletes, The National Lottery pretty much funds every cool thing ever across the UK.
-
+                  %p.chat
+                    Also, can you raise awareness that as well as athletes,
+                    %b The National Lottery
+                    pretty much
+                    %b funds every cool
+                    thing ever across the
+                    %b UK.
 .section
   .sub-section
     .outer
@@ -41,26 +60,37 @@
         .inner
 
           .row
-            .nine.columns.split-75-25
+            .twelve.columns.split-75-25
 
               .chat-block
-                .highlight.highlight-pink.triangle-border.right.single
+                .highlight.highlight-pink.triangle-border.right.single.chat-2-1.chat-right-2
                   %p.brand Tanjun:
                   %p.chat Right! Yeah, we’ll add that to the list.
 
               .chat-block
-                .highlight.highlight-blue.triangle-border.left
+                .highlight.highlight-blue.triangle-border.left.chat-2-2.chat-left-2
                   %p.brand The National Lottery:
-                  %p.chat Oh, one other thing…
-                .highlight.highlight-pink.triangle-border.right
+                  %p.chat
+                    Oh,
+                    %b one
+                    other thing…
+                .highlight.highlight-pink.triangle-border.right.chat-2-3.chat-right-2
                   %p.brand Tanjun:
                   %p.chat Yeah, sure, go for it!
 
               .chat-block
-                .highlight.highlight-blue.triangle-border.left
+                .highlight.highlight-blue.triangle-border.left.chat-2-4.chat-left-2
                   %p.brand The National Lottery:
-                  %p.chat You’ll need to also generate over 2 million views and help shift the perception of the National Lottery to a more playful, confident and self-aware brand as well as driving significant engagement across our new social channels.
-                .highlight.highlight-pink.triangle-border.right
+                  %p.chat
+                    You’ll need to also generate over
+                    %b 2 million views
+                    and help shift the perception of the National Lottery to a more
+                    %b playful, confident and self-aware
+                    brand as well as driving significant engagement across our
+                    %b new social channels.
+                .highlight.highlight-pink.triangle-border.right.chat-2-5.chat-right-2
                   %p.brand Tanjun:
-                  %p.chat  *gulp* Consider it done!
+                  %p.chat
+                    \*gulp*
+                    %b Consider it done!
 
