--- a/views/case-studies/big-and-bold/solution_section.haml
+++ b/views/case-studies/big-and-bold/solution_section.haml
@@ -12,7 +12,7 @@
                 %h1
                   The Solution
             .row
-              .seven.columns
+              .seven.columns.quick-expand
                 %h2
                   Think big!
                 %p
@@ -65,11 +65,11 @@
               .five.columns
 
                 .embed-container.long.media-mobile
-                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/195614777?autoplay=1&loop=1&title=0&byline=0&portrait=0", :webkitallowfullscreen => ""}
+                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/195614777?background=1", :webkitallowfullscreen => ""}
                 .sub.media-mobile
                   Our bottle flip challenge really got people talking! Was it real or not! A huge debate which drove engagment.
 
-              .seven.columns
+              .seven.columns.quick-expand
                 %p
                   Youtube is saturated with generic challenge videos, in response we decided to satirise this popular trend by creating the ‘ultimate’ challenge ‘challenge’ video. Poking fun at some of the most tired and popular trends!
                 %p
@@ -77,9 +77,6 @@
                   The concept was for Adam and KSI to complete 19 challenges, which marked 19 years that British athletes have been funded by The National Lottery.
                 %p
                   Each challenge was designed to create a talking point, therefore driving engagement and views. Conversation was also driven by the voice over we created with up and coming social star Schieffer Bates, as he introduces each challenge with a different impression. We deliberately didn’t name the people he was impersonating, but instead gave visual clues through typography and design.
-                %p
-                  Additionally, each challenge was re-edited to form individual short form pieces, which would help create additional relevant content for The National Lottery’s own social channels.
-                  This was also supported by a Behind the Scenes video that sat on The National Lottery’s youtube channel.
 
   .sub-section.sub-section-desktop
     .blue-block.blue-block-long
@@ -90,7 +87,7 @@
               .five.columns
 
                 .embed-container.long
-                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/195614777?autoplay=1&loop=1&title=0&byline=0&portrait=0", :webkitallowfullscreen => ""}
+                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/195614777?background=1", :webkitallowfullscreen => ""}
                 .sub
                   Our bottle flip challenge really got people talking! Was it real or not! A huge debate which drove engagment.
 
@@ -115,16 +112,16 @@
         .middle
           .inner
             .row
-              .seven.columns
+              .seven.columns.quick-expand
                 %p
                   Additionally, each challenge was re-edited to form individual short form pieces, which would help create additional relevant content for The National Lottery’s own social channels. This was also supported by a Behind the Scenes video that sat on The National Lottery’s youtube channel. Awesome!!!
 
               .five.columns.media-mobile
                 .embed-container.short
-                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/195639791?autoplay=1&loop=1&title=0&byline=0&portrait=0", :webkitallowfullscreen => ""}
+                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/195639791?background=1", :webkitallowfullscreen => ""}
 
             .row
-              .seven.columns
+              .seven.columns.quick-expand
                 .quote
                   “  Tanjun managed to produce a film which worked for both us and KSI. It was pitched perfectly – funny, tongue-in-cheek, well messaged – and has had great audience engagement. "
                 .auth
@@ -148,7 +145,7 @@
                   %br National Lottery Promotions Unit
               .five.offset-by-one.columns
                 .embed-container.short
-                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/195639791?autoplay=1&loop=1&title=0&byline=0&portrait=0", :webkitallowfullscreen => ""}
+                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/195639791?background=1", :webkitallowfullscreen => ""}
 
 
 
