--- a/views/case-studies/campaigns/header.haml
+++ b/views/case-studies/campaigns/header.haml
@@ -8,4 +8,4 @@
         Panasonic
 
   .overlay
-  .header-image{ :style => "background-image: url('/assets/img/case-studies/campaigns/header-img.jpg')"}
+  .header-image{ :style => "background-image: url('/assets/img/case-studies/campaigns/header-img.png')"}
