--- a/views/case-studies/campaigns/problem.haml
+++ b/views/case-studies/campaigns/problem.haml
@@ -11,26 +11,26 @@
       .middle
         .inner
           .row
-            .eight.columns.split-50-50
+            .twelve.columns.split-50-50
 
               .chat-block
-                .highlight.highlight-blue.triangle-border.left
+                .highlight.highlight-blue.triangle-border.left.chat-1-1.chat-left
                   %p.brand Panasonic:
                   %p.chat You guys seem alright! Wanna work on a UGC campaign for us?
-                .highlight.highlight-pink.triangle-border.right
+                .highlight.highlight-pink.triangle-border.right.chat-1-2.chat-right
                   %p.brand Tanjun:
                   %p.chat YES! We would like that very much. Thank you!
 
               .chat-block
-                .highlight.highlight-blue.triangle-border.left
+                .highlight.highlight-blue.triangle-border.left.chat-1-3.chat-left
                   %p.brand Panasonic:
                   %p.chat Great! We want you to develop a campaign around Team GB’s ‘Superfans’. Aim is to create excitement around the support for Team GB, building up to and during the Olympic Games.
-                .highlight.highlight-pink.triangle-border.right
+                .highlight.highlight-pink.triangle-border.right.chat-1-4.chat-right
                   %p.brand Tanjun:
                   %p.chat Well that sounds A…mazing! Any other requirements?
 
               .chat-block
-                .highlight.highlight-blue.triangle-border.left
+                .highlight.highlight-blue.triangle-border.left.chat-1-5.chat-left
                   %p.brand Panasonic:
                   %p.chat Yep! You need to put the Panasonic brand at the heart of this period of celebration and support.
 
@@ -43,25 +43,25 @@
         .inner
 
           .row
-            .eight.columns.split-50-50
+            .twelve.columns.split-50-50
 
               .chat-block
-                .highlight.highlight-pink.triangle-border.right.single
+                .highlight.highlight-pink.triangle-border.right.single.chat-2-1.chat-right-2
                   %p.brand Tanjun:
                   %p.chat We thought you might say that! Don’t worry! We know exactly what needs to be done here. To the Bat Cave!!
 
               .chat-block
-                .highlight.highlight-blue.triangle-border.left
+                .highlight.highlight-blue.triangle-border.left.chat-2-2.chat-left-2
                   %p.brand Panasonic:
                   %p.chat Errr…you have a bat cave? Maybe we’re paying you too much?
-                .highlight.highlight-pink.triangle-border.right
+                .highlight.highlight-pink.triangle-border.right.chat-2-3.chat-right-2
                   %p.brand Tanjun:
                   %p.chat It’s not strictly a cave. More an office/studio thingy with an iMac and a collection of tatty 80s film memorabilia!
 
               .chat-block
-                .highlight.highlight-blue.triangle-border.left
+                .highlight.highlight-blue.triangle-border.left.chat-2-4.chat-left-2
                   %p.brand Panasonic:
                   %p.chat Oh!! Well, that’s disappointing!! Keep all of the money. It sounds like you need it. In fact, have some more! Now get to work monkeys!
-                .highlight.highlight-pink.triangle-border.right
+                .highlight.highlight-pink.triangle-border.right.chat-2-5.chat-right-2
                   %p.brand Tanjun:
                   %p.chat Monkeys!!! To your typewriters!!
