--- a/views/case-studies/campaigns/solution_section.haml
+++ b/views/case-studies/campaigns/solution_section.haml
@@ -29,7 +29,7 @@
 
       .four.offset-by-seven.columns.ksi.media-mobile
         .ksi-img
-          %img.image{:src => "/assets/img/case-studies/campaigns/solution-1.jpeg"}
+          %img.image{:src => "/assets/img/case-studies/campaigns/solution-1.png"}
 
   .sub-section.sub-section-desktop
     = haml :'work-sections/bolt', :locals => { :header => true, :text => "The Solution" }
@@ -55,7 +55,7 @@
 
       .four.offset-by-seven.columns.ksi
         .ksi-img
-          %img.image{:src => "/assets/img/case-studies/campaigns/solution-1.jpeg"}
+          %img.image{:src => "/assets/img/case-studies/campaigns/solution-1.png"}
 
 .section
   .sub-section.sub-section-mobile
@@ -67,7 +67,7 @@
               .five.columns
 
                 .embed-container.long.media-mobile
-                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/195614777?autoplay=1&loop=1&title=0&byline=0&portrait=0", :webkitallowfullscreen => ""}
+                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/195614777?background=1", :webkitallowfullscreen => ""}
                 .sub.media-mobile
                   NEED COPY
 
@@ -93,7 +93,7 @@
               .five.columns
 
                 .embed-container.long
-                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/195614777?autoplay=1&loop=1&title=0&byline=0&portrait=0", :webkitallowfullscreen => ""}
+                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/195614777?background=1", :webkitallowfullscreen => ""}
                 .sub
                   NEED COPY
 
