--- a/views/case-studies/digital-influencer/header.haml
+++ b/views/case-studies/digital-influencer/header.haml
@@ -5,7 +5,7 @@
       National Lottery Awards
       %br
       %span.sub
-        Nattional lottery
+        National lottery
 
   .overlay
   .header-image{ :style => "background-image: url('/assets/img/case-studies/digital-influencer/header-img.jpg')"}
