--- a/views/case-studies/digital-influencer/solution_section.haml
+++ b/views/case-studies/digital-influencer/solution_section.haml
@@ -12,7 +12,7 @@
                 %h1
                   The Solution
             .row
-              .seven.columns
+              .seven.columns.quick-expand
                 %p
                   The National Lottery Good Causes social channels aren’t the biggest so we looked to build the campaign around a digital influencer to ensure the reach needed to promote such a massive TV show.
                   %br
@@ -24,15 +24,15 @@
                   Strategically we broke the content plan down into four stages:
 
                 %h2
-                  Pre-show
                   %span.small
+                    Pre-show
                     \- Building excitement and engagement leading up to the shows pre-record.
                 %p
                   Content included an Anto Sharp short form piece, a snapchat story of highlights from last year and a mobile optimised re-edit of Arron Crascall previous behind the scenes.
 
-      .four.offset-by-seven.columns.ksi.media-mobile
-        .ksi-img
-          %img.image{:src => "/assets/img/case-studies/digital-influencer/solution-1.jpeg"}
+              .four.two-thirds.columns
+                .embed-container.long.media-mobile
+                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/214293764?background=1", :webkitallowfullscreen => ""}
 
   .sub-section.sub-section-desktop
     = haml :'work-sections/bolt', :locals => { :header => true, :text => "The Solution" }
@@ -61,9 +61,9 @@
                   Content included an Anto Sharp short form piece, a snapchat story of highlights from last year and a mobile optimised re-edit of Arron Crascall previous behind the scenes.
 
 
-      .four.offset-by-seven.columns.ksi
-        .ksi-img
-          %img.image{:src => "/assets/img/case-studies/digital-influencer/solution-1.jpeg"}
+              .four.two-thirds.columns
+                .embed-container.long.media-mobile
+                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/214293764?background=1", :webkitallowfullscreen => ""}
 
 .section
   .sub-section.sub-section-mobile
@@ -75,30 +75,30 @@
               .five.columns
 
                 .embed-container.long.media-mobile
-                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/195614777?autoplay=1&loop=1&title=0&byline=0&portrait=0", :webkitallowfullscreen => ""}
+                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/214296255?background=1", :webkitallowfullscreen => ""}
                 .sub.media-mobile
                   Our bottle flip challenge really got people talking! Was it real or not! A huge debate which drove engagment.
 
-              .seven.columns
+              .seven.columns.quick-expand
 
                 %h2
-                  Awards Night
                   %span.small
-                    \- Sneak peeks behind the scenes. With strong calls to action promoting the broadcast.
+                    Awards Night
+                    \- Sneak peeks behind the scenes. With strong calls to action promoting the broadcast
                 %p
                   This included a facebook live stream by Stuggy to over 2 million followers, a snapchat story by Arron Crascall which was viewed 100k times, plus various posts from Anto Sharp to over 1 million followers.
 
                 %h2
-                  Awards Broadcast
                   %span.small
-                    \- Supplementing behind the scenes content as the Awards were broadcast. Driving ‘second screening’ and engagement.
+                    Awards Broadcast
+                    \- Supplementing behind the scenes content, driving ‘second screening’
                 %p
                   This saw the release of a behind the scenes 360 tour, hosted by Stuggy. A highlights compilation by Anto Sharp, a snapchat story by Stuggy and a short form piece featuring Arron Crascall.
 
                 %h2
-                  Post Broadcast
                   %span.small
-                    \- A series of additional pieces of content designed to drive iPlayer views post broadcast.A series of additional pieces of content designed to drive iPlayer views post broadcast.A series of additional pieces of content designed to drive iPlayer views post broadcast.
+                    Post Broadcast
+                    \- Additional pieces of content designed to drive iPlayer views post broadcast
                 %p
                   Our full behind the scenes film went live. This was supported by an Instagram highlights compilation by Arron Crascall, a final snapchat story featuring all highlights and three entertaining ad-hoc short form pieces.
 
@@ -113,7 +113,7 @@
               .five.columns
 
                 .embed-container.long
-                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/195614777?autoplay=1&loop=1&title=0&byline=0&portrait=0", :webkitallowfullscreen => ""}
+                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/214296255?background=1", :webkitallowfullscreen => ""}
                 .sub
                   Our bottle flip challenge really got people talking! Was it real or not! A huge debate which drove engagment.
 
@@ -146,17 +146,12 @@
         .middle
           .inner
             .row
-              .seven.columns
-                %p
-                  Additionally, each challenge was re-edited to form individual short form pieces, which would help create additional relevant content for The National Lottery’s own social channels. This was also supported by a Behind the Scenes video that sat on The National Lottery’s youtube channel. Awesome!!!
-
               .five.columns.media-mobile
-                .embed-container.short
-                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/195639791?autoplay=1&loop=1&title=0&byline=0&portrait=0", :webkitallowfullscreen => ""}
+                .embed-container.mobile
+                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/183651482?background=1", :webkitallowfullscreen => ""}
 
-            .row
-              .seven.columns
-                .quote
+              .seven.columns.quick-expand
+                .quote.quote-long
                   “ It’s always a risk mixing mainstream celebrities with internet sensations – especially on the red carpet - but Tanjun managed to do this very successfully.  They managed to book us the holy trinity of Facebook – Arron, Anto and Stuggy and then concocted a whole series of encounters with the likes of Ainsley Harriott, Anton du Beke, Kimberley Wyatt and a host of Strictly dancers. They researched the opportunities and devised plans which they could then adapt to the situations as they arose. "
                 .auth
                   — Jackie O Sullivan, Director,
@@ -172,14 +167,14 @@
           .inner
             .row
               .five.offset-by-one.columns
-                .quote
+                .quote.quote-long
                   “ It’s always a risk mixing mainstream celebrities with internet sensations – especially on the red carpet - but Tanjun managed to do this very successfully.  They managed to book us the holy trinity of Facebook – Arron, Anto and Stuggy and then concocted a whole series of encounters with the likes of Ainsley Harriott, Anton du Beke, Kimberley Wyatt and a host of Strictly dancers. They researched the opportunities and devised plans which they could then adapt to the situations as they arose. "
                 .auth
                   — Jackie O Sullivan, Director,
                   %br National Lottery Promotions Unit
               .five.offset-by-one.columns
-                .embed-container.short
-                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/195639791?autoplay=1&loop=1&title=0&byline=0&portrait=0", :webkitallowfullscreen => ""}
+                .embed-container.mobile
+                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/183651482?background=1", :webkitallowfullscreen => ""}
 
 
 
