--- a/views/case-studies/digital-influencer/video.haml
+++ b/views/case-studies/digital-influencer/video.haml
@@ -3,11 +3,11 @@
   .lity-iframe-container.lity-hide
     %iframe{:allowfullscreen => "", :webkitallowfullscreen => "", :mozallowfullscreen => "", :frameborder => "0", :src => "https://player.vimeo.com/video/203277091"}
 
-  %a.play-btn{"data-lity" => "", :href => "//vimeo.com/"}
+  %a.play-btn{"data-lity" => "", :href => "//vimeo.com/182348873"}
     %p Play!
 
   .overlay
   %video#vid{:loop => "", :muted => "", :preload => "none", :playsinline => ""}
-    %source#mp4{:src => "https://s3.eu-west-2.amazonaws.com/tanjun/case-studies/digital-influencer/EVERY_YOUTUBER_CHALLENGE_EVER_-_KSI.mp4",      :type => "video/mp4"}
-      %source#webm{:src => "https://s3.eu-west-2.amazonaws.com/tanjun/case-studies/digital-influencer/EVERY_YOUTUBER_CHALLENGE_EVER_-_KSI.webm",  :type => "video/webm"}
-        %source{:src => "https://s3.eu-west-2.amazonaws.com/tanjun/case-studies/digital-influencer/EVERY_YOUTUBER_CHALLENGE_EVER_-_KSI.ogv",      :type => "video/ogg"}
+    %source#mp4{:src => "https://s3.eu-west-2.amazonaws.com/tanjun/case-studies/digital-influencer/reel.mp4",      :type => "video/mp4"}
+      %source#webm{:src => "https://s3.eu-west-2.amazonaws.com/tanjun/case-studies/digital-influencer/reel.webm",  :type => "video/webm"}
+        %source{:src => "https://s3.eu-west-2.amazonaws.com/tanjun/case-studies/digital-influencer/reel.ogv",      :type => "video/ogg"}
