--- a/views/case-studies/digital-strategy/header.haml
+++ b/views/case-studies/digital-strategy/header.haml
@@ -8,4 +8,4 @@
         British Triathlon
 
   .overlay
-  .header-image{ :style => "background-image: url('/assets/img/case-studies/digital-strategy/header-img.jpg')"}
+  .header-image.header-image-left{ :style => "background-image: url('/assets/img/case-studies/digital-strategy/header-img.jpg')"}
