--- a/views/case-studies/digital-strategy/problem.haml
+++ b/views/case-studies/digital-strategy/problem.haml
@@ -11,46 +11,33 @@
       .middle
         .inner
           .row
-            .six.columns.split-50-50
+            .twelve.columns.split-50-50
 
               .chat-block
-                .highlight.highlight-blue.triangle-border.left
+                .highlight.highlight-blue.triangle-border.left.chat-1-1.chat-left
                   %p.brand British Triathlon:
                   %p.chat Our friends at Team GB gave us your details. We’re relaunching our entire digital brand and need some kick-ass content ideas. You in?
-                .highlight.highlight-pink.triangle-border.right
+                .highlight.highlight-pink.triangle-border.raised.right.chat-1-2.chat-right
                   %p.brand Tanjun:
                   %p.chat Sounds more fun than a barrel of monkeys! We’re in!
 
               .chat-block
-                .highlight.highlight-blue.triangle-border.left
+                .highlight.highlight-blue.triangle-border.left.chat-1-3.chat-left
                   %p.brand British Triathlon:
                   %p.chat Great! Can you come in and present three content ideas?
-                .highlight.highlight-pink.triangle-border.right
+                .highlight.highlight-pink.triangle-border.raised.right.chat-1-4.chat-right
                   %p.brand Tanjun:
                   %p.chat  No! Nope, nooooo, nopey nope! We’ll do even better than that!
 
-
-.section
-  .sub-section
-    .outer
-      .middle
-        .inner
-
-          .row
-            .six.columns.split-50-50
-
               .chat-block
-                .highlight.highlight-blue.triangle-border.left
+                .highlight.highlight-blue.triangle-border.left.chat-1-5.chat-left
                   %p.brand British Triathlon:
                   %p.chat Ok!!!
-                .highlight.highlight-pink.triangle-border.right
+                .highlight.highlight-pink.triangle-border.right.chat-1-6.chat-right
                   %p.brand Tanjun:
                   %p.chat We’ll create a whole content strategy which will develop a solid blueprint for your entire approach to content creation.
 
               .chat-block
-                .highlight.highlight-blue.triangle-border.left
+                .highlight.highlight-blue.triangle-border.left.chat-1-7.chat-left
                   %p.brand British Triathlon:
                   %p.chat Well, i’ll be a monkey's uncle!!! That’d be awesome! You guys are the bestest!
-                .highlight.highlight-pink.triangle-border.right
-                  %p.brand Tanjun:
-                  %p.chat Yes...yes we are! :)
