--- a/views/case-studies/digital-strategy/solution_section.haml
+++ b/views/case-studies/digital-strategy/solution_section.haml
@@ -14,9 +14,7 @@
             .row
               .seven.columns
                 %h2 A Foundation
-                %p We built a complete content strategy from the ground up by deconstructing their audience into key passion points. We proposed a three tier approach to content creation which provided clarity on what needed to be made.
-
-                %p These are the content tiers we applied and their primary purpose:
+                %p We built a complete content strategy from the ground up by deconstructing their audience into key passion points. We proposed a three tier approach to content creation which provided clarity on what needed to be made. These are the content tiers we applied and their primary purpose:
 
                 %h3 Tier One:
 
@@ -44,9 +42,7 @@
             .row
               .seven.columns
                 %h2 A Foundation
-                %p We built a complete content strategy from the ground up by deconstructing their audience into key passion points. We proposed a three tier approach to content creation which provided clarity on what needed to be made.
-
-                %p These are the content tiers we applied and their primary purpose:
+                %p We built a complete content strategy from the ground up by deconstructing their audience into key passion points. We proposed a three tier approach to content creation which provided clarity on what needed to be made. These are the content tiers we applied and their primary purpose:
 
                 %h3 Tier One:
 
@@ -74,7 +70,8 @@
               .five.columns
 
                 .embed-container.long.media-mobile
-                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/195614777?autoplay=1&loop=1&title=0&byline=0&portrait=0", :webkitallowfullscreen => ""}
+
+                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "https://www.youtube.com/embed/yV3Eq3EINK8", :webkitallowfullscreen => ""}
                 .sub.media-mobile
                   NEED COPY
 
@@ -97,7 +94,7 @@
               .five.columns
 
                 .embed-container.long
-                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/195614777?autoplay=1&loop=1&title=0&byline=0&portrait=0", :webkitallowfullscreen => ""}
+                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "https://www.youtube.com/embed/yV3Eq3EINK8", :webkitallowfullscreen => ""}
                 .sub
                   NEED COPY
 
@@ -120,7 +117,7 @@
             .row
               .five.columns.media-mobile
                 .embed-container.short
-                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/195639791?autoplay=1&loop=1&title=0&byline=0&portrait=0", :webkitallowfullscreen => ""}
+                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/195639791?background=1", :webkitallowfullscreen => ""}
 
               .seven.columns
                 %h2 Membership
@@ -152,7 +149,7 @@
 
               .five.columns
                 .embed-container.short
-                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/195639791?autoplay=1&loop=1&title=0&byline=0&portrait=0", :webkitallowfullscreen => ""}
+                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/195639791?background=1", :webkitallowfullscreen => ""}
 
 
 
