--- a/views/case-studies/small-and-nimble/solution_section.haml
+++ b/views/case-studies/small-and-nimble/solution_section.haml
@@ -26,10 +26,9 @@
                 %p
                   To enable quick content executions that were flexible and reactive, we built a number of short form pieces, supported by exclusive behind the scenes imagery.
 
-
-      .four.offset-by-seven.columns.ksi.media-mobile
-        .ksi-img
-          %img.image{:src => "/assets/img/case-studies/small-and-nimble/solution-1.jpeg"}
+              .five.columns
+                .embed-container.long.media-mobile
+                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/214290937?background=1", :webkitallowfullscreen => ""}
 
   .sub-section.sub-section-desktop
     = haml :'work-sections/bolt', :locals => { :header => true, :text => "The Solution" }
@@ -53,9 +52,9 @@
                 %p
                   To enable quick content executions that were flexible and reactive, we built a number of short form pieces, supported by exclusive behind the scenes imagery.
 
-      .four.offset-by-seven.columns.ksi
-        .ksi-img
-          %img.image{:src => "/assets/img/case-studies/small-and-nimble/solution-1.jpeg"}
+              .four.one-half.columns
+                .embed-container.long.media-mobile
+                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/214290937?background=1", :webkitallowfullscreen => ""}
 
 .section
   .sub-section.sub-section-mobile
@@ -67,7 +66,7 @@
               .five.columns
 
                 .embed-container.long.media-mobile
-                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/195614777?autoplay=1&loop=1&title=0&byline=0&portrait=0", :webkitallowfullscreen => ""}
+                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/214291312?background=1", :webkitallowfullscreen => ""}
                 .sub.media-mobile
                   Our bottle flip challenge really got people talking! Was it real or not! A huge debate which drove engagment.
 
@@ -97,7 +96,7 @@
               .five.columns
 
                 .embed-container.long
-                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/195614777?autoplay=1&loop=1&title=0&byline=0&portrait=0", :webkitallowfullscreen => ""}
+                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/214291312?background=1", :webkitallowfullscreen => ""}
                 .sub
                   Our bottle flip challenge really got people talking! Was it real or not! A huge debate which drove engagment.
 
