--- a/views/hero.haml
+++ b/views/hero.haml
@@ -7,3 +7,4 @@
       .triangle-after.triangle-up-after.triangle-right-after
     .triangle.triangle-up.triangle-left
       .triangle-after.triangle-up-after.triangle-left-after
+    .hero-buffer
