--- a/assets/css/font.sass
+++ b/assets/css/font.sass
@@ -28,53 +28,79 @@ h1
   font-family: 'Header'
   padding: 1em 0 0.5em 0
   font-size: 2.3em
+  letter-spacing: 0.02em
+
+h2
+  font-family: 'Header'
+  font-size: 2em
+  letter-spacing: 0.015em
+
+  .small
+    font-family: 'BodyBold'
+    font-size: 0.8em
+    letter-spacing: 0.015em
+
+h3
+  font-family: 'Header'
+  font-size: 1.1em
+  color: white
+  margin-bottom: 0
 
 p
   font-family: 'Body'
   padding: 0.7em 0
   font-size: 1.4em
+  letter-spacing: 0.04em
+  line-height: 1.8em
 
 b
   font-family: 'BodyBold'
+  letter-spacing: 0.02em
 
 .quote
   font-family: 'Header'
   color: white
   font-size: 1.8em
   padding: 1em 0
+  letter-spacing: 0.02em
+
+.quote-long
+  font-size: 1.3em
 
 .auth
   font-family: 'BodyBold'
   color: $pink
   font-size: 1em
   text-align: right
+  letter-spacing: 0.02em
 
 .button
   font-size: 1.3em
   font-family: 'BodyBold'
-
-h2
-  font-family: 'Header'
-  font-size: 2em
+  letter-spacing: 0.06em
 
 .result-block
   p
     text-align: center
     font-family: 'Feature'
-    font-size: 1em
+    font-size: 0.8em
+    letter-spacing: 0.1em
 
   h5
     font-size: 3em
     font-family: 'Feature'
     text-align: center
+    letter-spacing: 0.02em
 
 .highlight-blue,
 .highlight-pink
   padding: 0
+  letter-spacing: 0.02em
 
 .blue-block
   h2, p
     color: white
+    letter-spacing: 0.02em
 
 .nav
   li
@@ -83,26 +109,36 @@ h2
       font-weight: 900
       font-size: 1.2em
       text-decoration: none
+      letter-spacing: 0.04em
 
 .hero-header
   p
     font-family: 'Feature'
     font-size: 7em
+    letter-spacing: 0.1em
+    padding: 0
+    margin: 0
+    line-height: 1.6em
     .sub
       font-size: 0.6em
+      letter-spacing: 0.1em
+      line-height: 1.7em
+      font-family: 'Feature'
 
 
 .play-btn
   p
     font-family: 'Feature'
     font-size: 8em
+    letter-spacing: 0.02em
 
 .sub
   font-size: 0.8em
   margin: 0
   padding: 0.4em 0 0 0
-  font-family: 'Feature'
+  font-family: 'BodyBold'
   color: white
+  letter-spacing: 0.02em
 
 @media (max-width: 1800px)
 
@@ -179,6 +215,9 @@ h2
   .quote
     font-size: 1.4em
 
+  .quote-long
+    font-size: 1.1em
+
   .auth
     font-size: 1em
 
@@ -190,12 +229,17 @@ h2
   p
     font-size: 0.9em
     margin-bottom: 0.3em
+    line-height: 1.6em
 
   .button
     font-size: 1em
 
   h2
     font-size: 1.4em
+    margin-bottom: 0
+    .small
+      font-size: 0.7em
+      line-height: 1.6em
 
   .hero-header
     p
