--- a/views/case-studies/small-and-nimble/problem.haml
+++ b/views/case-studies/small-and-nimble/problem.haml
@@ -11,21 +11,21 @@
       .middle
         .inner
           .row
-            .six.columns.split-50-50
+            .twelve.columns.split-50-50
 
               .chat-block
-                .highlight.highlight-blue.triangle-border.left
+                .highlight.highlight-blue.triangle-border.left.chat-1-1.chat-left
                   %p.brand Team GB
                   %p.chat  Brazil. Olympic Preparation Camp. Team GB athletes. Make stuff?
-                .highlight.highlight-pink.triangle-border.right
+                .highlight.highlight-pink.triangle-border.right.chat-1-2.chat-right
                   %p.brand Tanjun:
                   %p.chat Yes, yes...aaaand yes!
 
               .chat-block
-                .highlight.highlight-blue.triangle-border.left
+                .highlight.highlight-blue.triangle-border.left.chat-1-3.chat-left
                   %p.brand Team GB
                   %p.chat Cool! You’ll have very limited access and time with the athletes so you’ll need to be super reactive and think on your feet! Do monkeys even have feet?
-                .highlight.highlight-pink.triangle-border.right
+                .highlight.highlight-pink.triangle-border.right.chat-1-4.chat-right
                   %p.brand Tanjun:
                   %p.chat  Yes! Yes we do! Thank you very much!
 
@@ -37,20 +37,20 @@
         .inner
 
           .row
-            .six.columns.split-50-50
+            .twelve.columns.split-50-50
 
               .chat-block
-                .highlight.highlight-blue.triangle-border.left
+                .highlight.highlight-blue.triangle-border.left.chat-2-1.chat-left-2
                   %p.brand Team GB
                   %p.chat Also, we need to tell the story of the Team GB Olympic prep camp. The team behind the team. It’s the first time we’ve done this, so don’t mess it up!!
-                .highlight.highlight-pink.triangle-border.right
+                .highlight.highlight-pink.triangle-border.right.chat-2-2.chat-right-2
                   %p.brand Tanjun:
                   %p.chat We’re highly professional, talented and handsome monkeys! We’ve got this!
 
               .chat-block
-                .highlight.highlight-blue.triangle-border.left
+                .highlight.highlight-blue.triangle-border.left.chat-2-3.chat-left-2
                   %p.brand Team GB
                   %p.chat Good! Anyway, swing on down to Belo Horizonte and we’ll see you there. It’s gonna be some summer!
-                .highlight.highlight-pink.triangle-border.right
+                .highlight.highlight-pink.triangle-border.right.chat-2-4.chat-right-2
                   %p.brand Tanjun:
                   %p.chat *cue frantic swinging*
